objects/AsiaProjectMaster__c.object
<CustomObject>
    <fields>
        <fullName>CertificationDate__c</fullName>
        <label>COI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>JEOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL ASIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Master (Contract Account)</relationshipLabel>
        <relationshipName>ProjectMaster_ContractAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Master</relationshipLabel>
        <relationshipName>ProjectMaster_ContractAccount_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAddress__c</fullName>
        <label>Contract Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractBelong__c</fullName>
        <label>Contract Belong</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCode__c</fullName>
        <label>Contract Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visualforce画面にて検索ダイアログを出すためだけに使用。 
値は入れないようにしてください。</description>
        <label>ContractContact_dummyField</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Master</relationshipLabel>
        <relationshipName>ProjectMaster_ContractContact_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractEmail__c</fullName>
        <label>Contract Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractFax__c</fullName>
        <label>Contract Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractName1__c</fullName>
        <label>Contract Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName2__c</fullName>
        <label>Contract Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPersonInCharge__c</fullName>
        <label>Contract Person In Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhone__c</fullName>
        <label>Contract Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractPost__c</fullName>
        <label>Contract Post</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPrice__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractUndergraduate__c</fullName>
        <label>Contract Undergraduate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyContractPrice__c</fullName>
        <label>Currency Contract Price</label>
        <picklist>
            <picklistValues>
                <fullName>SGD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPONumber__c</fullName>
        <label>Customer PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>Department Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationMonth__c</fullName>
        <label>Month of Expiry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintRenewalDaysFormula__c</fullName>
        <formula>ShipmentAccount__r.MaintRenewalDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaintRenewalDaysFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationDescription__c</fullName>
        <label>Organization Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductsInformationsDescription__c</fullName>
        <label>Products Informations Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PC No.</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>Project Master</relationshipLabel>
        <relationshipName>ProjectMaster_ProfitCalculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectMaster_SalesAssistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCurrency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>SGD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectMaster_SalesPerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Master (Shipment Account)</relationshipLabel>
        <relationshipName>ProjectMaster_ShipmentAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipmentAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Master (ShipmentAccount_dummyField)</relationshipLabel>
        <relationshipName>ProjectMaster_ShipmentAccount_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAddress__c</fullName>
        <label>Shipment Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentBelong__c</fullName>
        <label>Shipment Belong</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCode__c</fullName>
        <label>Shipment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipmentContact_dummyField</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Master (ShipmentContact_dummyField)</relationshipLabel>
        <relationshipName>ProjectMaster_ShipmentContact_dummy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentCountry__c</fullName>
        <label>Shipment Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentEmail__c</fullName>
        <label>Shipment Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipmentFax__c</fullName>
        <label>Shipment Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentName1__c</fullName>
        <label>Shipment Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName2__c</fullName>
        <label>Shipment Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName__c</fullName>
        <label>Shipment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPersonInCharge__c</fullName>
        <label>Shipment Person In Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPhone__c</fullName>
        <label>Shipment Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentPost__c</fullName>
        <label>Shipment Post</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentUndergraduate__c</fullName>
        <label>Shipment Undergraduate</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under warranty</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WarrantyDescription__c</fullName>
        <label>Warranty Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SalesAssistant__c</columns>
        <columns>ContractEndDate__c</columns>
        <columns>ContractName__c</columns>
        <columns>ContractStartDate__c</columns>
        <columns>ContractUndergraduate__c</columns>
        <columns>CreatedDateFormula__c</columns>
        <columns>CurrencyContractPrice__c</columns>
        <columns>DepartmentName__c</columns>
        <columns>Model__c</columns>
        <columns>ProjectNumber__c</columns>
        <columns>SalesPerson__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>Series__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Contracted</value>
        </filters>
        <label>SVC Contract List 保守契約一覧</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SalesAssistant__c</columns>
        <columns>ContractStartDate__c</columns>
        <columns>ContractEndDate__c</columns>
        <columns>ContractCode__c</columns>
        <columns>ContractPrice__c</columns>
        <columns>CreatedDateFormula__c</columns>
        <columns>Model__c</columns>
        <columns>Series__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All すべてを選択</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Under_Warranty_Under_SVC_Contract</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under warranty,Contracted</value>
        </filters>
        <label>Under Warranty / Under SVC Contract</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PJM-{00000000}</displayFormat>
        <label>Project No.</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>SFDC</fullName>
        <active>true</active>
        <label>SFDC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>